--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git@github.com:flame-engine/flame_perfomance_test_game.git
 [submodule "third_party/reveal.js"]
 	path = third_party/reveal.js
-	url = git@github.com:hakimel/reveal.js.git
+	url = git@github.com:christopherfujino/reveal.js.git
